# 09_PROJETO_I

./: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
clonedrive/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
clonedrive/templates/: base.html  password_reset_done.html  password_reset_form.html  password_reset_sent.html  reset_password.html
clonedrive/templates/auth/: login.html  signup.html
website/: admin.py  models.py  urls.py  utils.py  views.py
website/migrations/: 0001_initial.py  0002_alter_file_folder.py
website/static/: main.js  style.css  webcomponents.js
website/templates/: 404.html  home.html
