[tool.poetry]
name = "09-projeto-i"
version = "0.1.0"
description = ""
authors = ["ricardoAlmeidaEtic <ricardo_almeida@eticalgarve.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
